# rust-trader

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  log4rs.yaml  report.py  rustfmt.toml  transaction_query.sql
pythonKrakenDCA/: bbmfibuyer.py  checker.py  common.py  copy.sh  dcaBuyer.py  kraken.py  mailer.py  mfibuyer.py  rsibuyer.py  sellcmd.py  seller.py  setup.cfg
src/: backtest.rs  binance.rs  candles.rs  configuration.rs  drivers.rs  error.rs  import.rs  lib.rs  live.rs  main.rs  orders.rs  statistics.rs  storage.rs  strategy.rs  symbol.rs  utils.rs  wallets.rs
src/drivers/: binance.rs  binance_types.rs  mod.rs
src/strategies/: bbb_mfi_scalp.rs  buy_dips.rs  macd1.rs  macd2.rs  mod.rs  sample.rs
