[package]
name = "trader"
version = "0.1.0"
authors = ["lightyear15 <g.minist8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {version = "0.11.0"}
serde = {version = "1.0", features = ["derive", "std"]}
rand = {version = "0.8.3"}
chrono = {version = "0.4", features = ["serde"]}
structopt = { version = "0.3", default-features = false }
tokio-postgres = {version = "0.7.1", features = ["with-chrono-0_4"]}
async-trait = {version = "0.1.5"}
humantime-serde = {version = "1.0"}
futures = {version = "0.3.14"}
awc = {version = "2.0.3"}
actix-rt = {version = "2.2.0"}
actix = {version = "0.10"}
actix-web-actors = {version = "3"}
actix-web = {version = "3.2.0"}

[features]
static_ssl = ["openssl/vendored"]
[dependencies.openssl]
optional = true
