[package]
name = "trader"
version = "0.1.0"
authors = ["lightyear15 <g.minist8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version = "0.4"}
log4rs = {version = "1"}
config = {version = "0.11"}
serde = {version = "1", features = ["derive", "std"]}
serde_json = {version = "1"}
serde_qs = {version = "0"}
rand = {version = "0.8"}
chrono = {version = "0.4", features = ["serde"]}
structopt = { version = "0.3", default-features = false }
tokio-postgres = {version = "0.5", features = ["with-chrono-0_4", "runtime"]}
async-trait = {version = "0.1"}
humantime-serde = {version = "1"}
humantime = {version = "2"}
futures-util = {version = "0.3"}
actix-web = {version = "3.3"}
actix-rt = {version = "1.1"}
actix-codec = {version = "0.3"}
actix = {version = "0.10"}
actix-web-actors = {version = "3"}
awc = {version = "2.0", features = ["openssl"]}
openssl = {version = "0.10", features = ["vendored"]}
openssl-sys = {version = "0.9"}
openssl-probe = {version = "0.1"}
progress = {version = "0.2.0"}

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
bindgen = {version = "0.58"}
